<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:descendantFocusability="blocksDescendants"
			  android:orientation="horizontal"
			  android:padding="@dimen/activity_margin">

	<ImageView
		android:id="@+id/image"
		android:layout_width="70dp"
		android:layout_height="70dp"
		tools:src="@drawable/add_image"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<LinearLayout
			android:id="@+id/constant_names"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:minHeight="88dp"
			android:orientation="vertical"
			android:paddingLeft="8dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="2"
				android:text="@string/product_name"
				android:textColor="@color/black"
				android:textSize="16sp"
				android:textStyle="bold"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:text="@string/product_quantity"
				android:textColor="@color/black"
				android:textSize="14sp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:text="@string/product_price"
				android:textColor="@color/black"
				android:textSize="14sp"/>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/dynamic_values"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/constant_names"
			android:minHeight="88dp"
			android:orientation="vertical"
			android:paddingLeft="8dp">

			<TextView
				android:id="@+id/name"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="2"
				android:maxLines="2"
				android:maxWidth="130dp"
				android:textSize="16sp"
				android:textStyle="bold"
				tools:text="26 char max"/>

			<TextView
				android:id="@+id/quantity"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:textSize="14sp"
				tools:text="12"/>

			<TextView
				android:id="@+id/price"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:layout_weight="1"
				android:textSize="14sp"
				tools:text="32$"/>

		</LinearLayout>

		<Button
			android:id="@+id/sale_button"
			android:layout_width="70dp"
			android:layout_height="40dp"
			android:layout_alignParentRight="true"
			android:layout_centerInParent="true"
			android:background="@drawable/button_sale"
			android:text="@string/button_sale"/>
	</RelativeLayout>

</LinearLayout>